--- a/app/src/main/res/values-w600dp/strings.xml
+++ b/app/src/main/res/values-w600dp/strings.xml
@@ -10,7 +10,6 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_contacts">Contacts</string>
-    <string name="menu_recycler">Contact recycler</string>
-    <string name="menu_profile">Profile</string>
+    <string name="menu_events">Events</string>
+    <string name="menu_news">News</string>
 </resources>
